--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -6,4 +6,9 @@
 [credential]
 	helper = cache --timeout=18000
 [core]
+	editor = vim
 	excludesfile = /home/axel/.gitignore_global
+[alias]
+	co = checkout
+	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+
