--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -6,7 +6,7 @@
 [credential]
 	helper = cache --timeout=18000
 [core]
-	editor = vim
+	editor = nvim
 	excludesfile = /home/axel/.gitignore_global
 [alias]
 	co = checkout
