--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -8,7 +8,13 @@
 [core]
 	editor = nvim
 	excludesfile = /home/axel/.gitignore_global
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
 	co = checkout
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
 
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
