--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,19 @@
-# set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 # set -ga terminal-overrides ",xterm:Tc"
+
+# remap prefix to Control + a
+set -g prefix C-a
+unbind C-b
+bind C-a send-prefix
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+# quick pane cycling
+unbind ^A
+bind ^A select-pane -t :.+
+
 set -g mouse on
 set -g history-limit 30000
 # List of plugins
