Fix autojmp on macOS

--- a/dotfiles/.zpreztorc
+++ b/dotfiles/.zpreztorc
@@ -32,10 +32,10 @@ zstyle ':prezto:load' pmodule \
   'spectrum' \
   'utility' \
   'completion' \
+  'fasd' \
   'syntax-highlighting' \
   'history-substring-search' \
-  'prompt' \
-  'fasd'
+  'prompt'
 
 #
 # Editor
