--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -9,7 +9,7 @@
 [core]
 	editor = nvim
 	excludesfile = /home/axel/.gitignore_global
-	; pager = diff-so-fancy | less --tabs=4 -RFX
+        pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
 	co = checkout
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
