Format gitconfig, tmux conf and vimrc conf files

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+set-option -g default-shell /usr/local/bin/zsh
 # set -ga terminal-overrides ",xterm:Tc"
 
 # remap prefix to Control + a
