Fix delay for ESC trigger in tmux

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -2,6 +2,9 @@ set -g default-terminal "screen-256color"
 set-option -g default-shell /usr/local/bin/zsh
 # set -ga terminal-overrides ",xterm:Tc"
 
+# set 10 ms delay for detecing esc (default is 500 ms)
+set -g escape-time 10
+
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
