--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -19,6 +19,14 @@
         oldHighlight = red bold 52
         newNormal = green bold
         newHighlight = green bold 22
+
+[color "diff"]
+        meta = 227
+        frag = magenta bold
+        commit =  227 bold
+        old = red bold
+        new = green bold
+        whitespace = red reverse
 [gpg]
         program = gpg1
 [commit]
