--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,4 @@
 [submodule "modules/prompt/external/powerlevel9k"]
 	path = modules/prompt/external/powerlevel9k
 	url = https://github.com/bhilburn/powerlevel9k.git
+	ignore = dirty
