--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -8,7 +8,7 @@
   helper = cache --timeout=18000
 [core]
   editor = nvim
-  excludesfile = /home/axel/.gitignore_global
+	excludesfile = /Users/axel/.gitignore_global
   pager = diff-so-fancy | less --tabs=4 -RFX
 [alias]
   co = checkout
