--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -1,33 +1,38 @@
 [user]
-  email = mail@axellarsson.nu
-  name = AxelTLarsson
-  signingkey = 27B8DF6F75DCFDC3
+    email = mail@axellarsson.nu
+    name = AxelTLarsson
+    signingkey = 6F86B42246015152
+
 [push]
-  default = matching
-[credential]
-  helper = cache --timeout=18000
+    default = simple
+    helper = cache --timeout=18000
+
 [core]
-  editor = nvim
-	excludesfile = /Users/axel/.gitignore_global
-  pager = diff-so-fancy | less --tabs=4 -RFX
+    editor = nvim
+    excludesfile = /Users/axel/.gitignore_global
+    pager = diff-so-fancy | less --tabs=4 -RFX
+
 [alias]
-  co = checkout
-  ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+    co = checkout
+    ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+    please = push --force-with-lease
 
 [color "diff-highlight"]
-  oldNormal = red bold
-  oldHighlight = red bold 52
-  newNormal = green bold
-  newHighlight = green bold 22
+    oldNormal = red bold
+    oldHighlight = red bold 52
+    newNormal = green bold
+    newHighlight = green bold 22
 
 [color "diff"]
-  meta = 227
-  frag = magenta bold
-  commit =  227 bold
-  old = red bold
-  new = green bold
-  whitespace = red reverse
+    meta = 227
+    frag = magenta bold
+    commit =  227 bold
+    old = red bold
+    new = green bold
+    whitespace = red reverse
+
 [gpg]
-  program = gpg1
+    program = gpg
+
 [commit]
-  gpgsign = false
+    gpgsign = true
