Improve .tmux.conf

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,34 +1,29 @@
-set -g default-terminal "screen-256color"
 set-option -g default-shell /usr/local/bin/zsh
-# set -ga terminal-overrides ",xterm:Tc"
 
-# set 10 ms delay for detecing esc (default is 500 ms)
-set -g escape-time 10
-
-# remap prefix to Control + a
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
-
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
-
-# quick pane cycling
-unbind ^A
-bind ^A select-pane -t :.+
+# True Color support
+set -ga terminal-overrides ",xterm:Tc"
 
 set -g mouse on
-set -g history-limit 30000
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @colors-solarized '256'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+# set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @colors-solarized '256'
+
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
+# Install tpm if not already installed
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Options below override those set by tmux-sensible
+# Set to "on" by tmux-sensible but causes terrible vim rendering on startup
+set -g focus-events off
