Enable TrueColor support in tmux/vim

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,7 +1,9 @@
 set-option -g default-shell /usr/local/bin/zsh
 
-# True Color support
-set -ga terminal-overrides ",xterm:Tc"
+# Add truecolor support
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# Default terminal is 256 colors
+set -g default-terminal "screen-256color"
 
 set -g mouse on
 
