Fix Tmux ESC delay

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,8 @@
 set-option -g default-shell /usr/local/bin/zsh
 
+# Fix esc delay
+set -sg escape-time 0
+
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
