--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -9,7 +9,7 @@
 
 [core]
     editor = nvim
-  excludesfile = /Users/axel/.gitignore_global
+    excludesfile = /Users/axel/.gitignore_global
     pager = diff-so-fancy | less --tabs=4 -RFX
 
 [alias]
@@ -35,4 +35,4 @@
     program = gpg
 
 [commit]
-    gpgsign = true
+    ; gpgsign = true
