--- a/.config/pgcli/config
+++ b/.config/pgcli/config
@@ -26,7 +26,7 @@ multi_line_mode = psql
 expand = False
 
 # Enables auto expand mode, which is similar to `\x auto` in psql.
-auto_expand = True
+auto_expand = False
 
 # If set to True, table suggestions will include a table alias
 generate_aliases = False
@@ -77,6 +77,8 @@ search_path_filter = False
 # Default pager.
 # By default 'PAGER' environment variable is used
 # pager = less -SRXF
+# https://github.com/okbob/pspg
+pager = pspg -XF -s 11
 
 # Timing of sql statments and table rendering.
 timing = True
