--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -154,7 +154,36 @@ persistent_logging: false
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
+#
+# Colors (Snazzy)
+# colors:
+  # # Default colors
+  # primary:
+    # background: '0x282a36'
+    # foreground: '0xeff0eb'
 
+  # # Normal colors
+  # normal:
+    # black:   '0x282a36'
+    # red:     '0xff5c57'
+    # green:   '0x5af78e'
+    # yellow:  '0xf3f99d'
+    # blue:    '0x57c7ff'
+    # magenta: '0xff6ac1'
+    # cyan:    '0x9aedfe'
+    # white:   '0xf1f1f0'
+
+  # # Bright colors
+  # bright:
+    # black:   '0x686868'
+    # red:     '0xff5c57'
+    # green:   '0x5af78e'
+    # yellow:  '0xf3f99d'
+    # blue:    '0x57c7ff'
+    # magenta: '0xff6ac1'
+    # cyan:    '0x9aedfe'
+    # white:   '0xf1f1f0'
+    
 # Colors (Hybrid)
 colors:
   # Default colors
@@ -185,18 +214,18 @@ colors:
     white:   '0xfcf7e2'
 
   # Dim colors
-  #
+  
   # If the dim colors are not set, they will be calculated automatically based
   # on the `normal` colors.
-  #dim:
-  #  black:   '0x000000'
-  #  red:     '0x8c3336'
-  #  green:   '0x7a8530'
-  #  yellow:  '0x97822e'
-  #  blue:    '0x506d8f'
-  #  magenta: '0x80638e'
-  #  cyan:    '0x497e7a'
-  #  white:   '0x9a9a9a'
+  dim:
+   black:   '0x000000'
+   red:     '0x8c3336'
+   green:   '0x7a8530'
+   yellow:  '0x97822e'
+   blue:    '0x506d8f'
+   magenta: '0x80638e'
+   cyan:    '0x497e7a'
+   white:   '0x9a9a9a'
 
   # Indexed Colors
   #
