Add gitgutter to vimrc

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -30,5 +30,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 run '~/.tmux/plugins/tpm/tpm'
 
 # Options below override those set by tmux-sensible
-# Set to "on" by tmux-sensible but causes terrible vim rendering on startup
-set -g focus-events off
+# Set to "on" by tmux-sensible but used to cause terrible vim rendering on startup in iTerm
+set -g focus-events on
