--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -14,6 +14,7 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @colors-solarized '256'
 
