--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -15,6 +15,9 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @colors-solarized '256'
 
@@ -22,6 +25,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'github_username/plugin_name'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
+
+set -g status-right "#{prefix_highlight} #{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %H:%M %d-%b-%y"
 
 # Install tpm if not already installed
 if "test ! -d ~/.tmux/plugins/tpm" \
