--- a/config/pgcli/config
+++ b/config/pgcli/config
@@ -193,7 +193,7 @@ Token.Toolbar.Transaction.Failed = "bg:#222222 #ff005f bold"
 [named queries]
 historical_performance = '''SELECT
   100.0 * shared_blks_hit / nullif(shared_blks_hit + shared_blks_read, 0) AS hit_percent, query
-  userid, rolname, calls, total_time, mean_time, rows,
+  userid, rolname, calls, total_time, mean_time, rows
 FROM pg_stat_statements
 JOIN pg_authid ON pg_stat_statements.userid = pg_authid.oid
 ORDER BY mean_time DESC
