Add vim-fugitive to nvim config

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -6,7 +6,8 @@ set -sg escape-time 0
 # Add truecolor support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Default terminal is 256 colors
-set -g default-terminal "screen-256color"
+set -s default-terminal "xterm-256color"
+# set -g default-terminal "tmux"
 
 set -g mouse on
 
@@ -17,8 +18,9 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# set -g @colors-solarized '256'
+# set -g @plugin 'odedlaz/tmux-onedark-theme'
+# set -g @plugin 'KeitaNakamura/neodark.vim'
+# set -g @plugin "arcticicestudio/nord-tmux"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
