--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -11,6 +11,9 @@ set -s default-terminal "xterm-256color"
 
 set -g mouse on
 
+# Match postgresql URLs, default url_search doesn't
+set -g @copycat_search_C-p '(https?://|git@|git://|ssh://|ftp://|postgresql://|file:///)[[:alnum:]?=%/_.:,;~@!#$&()*+-]*'
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
