--- a/config/pgcli.conf
+++ b/config/pgcli.conf
@@ -211,6 +211,7 @@ historical_performance_by_total = '''SELECT
 table_privilege = "select grantee, table_schema, table_name, privilege_type from information_schema.table_privileges where table_name like '$1'"
 [alias_dsn]
 bi = postgresql://etl@ja-bi.cfpim9tf70uk.eu-north-1.rds.amazonaws.com/analytics
+bi_replica = postgresql://etl@ja-bi-replica.cfpim9tf70uk.eu-north-1.rds.amazonaws.com/analytics
 analytics = postgresql://jointacademy@jointacademy.cy6yvswbjmjq.eu-west-1.rds.amazonaws.com:5432/jointacademy_analytics
 [data_formats]
 decimal = ""
