--- a/config/pgcli.conf
+++ b/config/pgcli.conf
@@ -208,6 +208,15 @@ historical_performance_by_total = '''SELECT
   JOIN pg_authid ON pg_stat_statements.userid = pg_authid.oid
   ORDER BY total_time DESC
   LIMIT 100'''
+blocked_queries = '''
+select
+    pid,
+    usename,
+    pg_blocking_pids(pid) as blocked_by,
+    query as blocked_query
+from pg_stat_activity
+where cardinality(pg_blocking_pids(pid)) > 0
+'''
 table_privilege = "select grantee, table_schema, table_name, privilege_type from information_schema.table_privileges where table_name like '$1'"
 [alias_dsn]
 bi = postgresql://etl@ja-bi.cfpim9tf70uk.eu-north-1.rds.amazonaws.com/analytics
