--- a/config/pgcli.conf
+++ b/config/pgcli.conf
@@ -218,6 +218,12 @@ from pg_stat_activity
 where cardinality(pg_blocking_pids(pid)) > 0
 '''
 table_privilege = "select grantee, table_schema, table_name, privilege_type from information_schema.table_privileges where table_name like '$1'"
+msg_insert = '''
+insert into messages (from_id, to_id, direction, patient_id, therapist_id, body, created_at, updated_at)
+  values (409699, 8254, 'from_patient', 409699, 8254, '$1', now(), now())
+returning
+  id
+'''
 [alias_dsn]
 bi = postgresql://etl@ja-bi.cfpim9tf70uk.eu-north-1.rds.amazonaws.com/analytics
 bi_replica = postgresql://etl@ja-bi-replica.cfpim9tf70uk.eu-north-1.rds.amazonaws.com/analytics
